# opendemo

./: .env.example  .gitignore  ABOUT.md  CLEANUP_REPORT.md  CODEOWNERS  COMPREHENSIVE-GAP-ANALYSIS.md  COMPREHENSIVE-IMPROVEMENT-SUMMARY.md  COMPREHENSIVE-TODO-EVALUATION.md  COMPREHENSIVE_IMPROVEMENT_PLAN.md  CONTRIBUTING.md  CROSS-TECH-INTEGRATION-PLAN.md  DATABASE-DEMO-SUMMARY.md  DETAILED_STRUCTURE.md  DEVELOPER-GUIDE.md  DOCUMENTATION-UPDATE-SUMMARY.md  EXECUTION-PLAN.md  EXECUTIVE_SUMMARY.md  JAVA-QUALITY-CHECK-SUMMARY.md  LICENSE  Makefile  PRIORITY_EXECUTION_PLAN.md  PROFESSIONAL-CLASSIFICATION-SYSTEM.md  PROJECT-CLEANUP-REPORT.md  PROJECT-DIRECTORY-AUDIT.md  PROJECT_ANALYSIS_AND_OPTIMIZATION_PLAN.md  PROJECT_STRUCTURE_ANALYSIS_REPORT.md  PROJECT_SUMMARY.md  README.backup  README.md  README_OLD.md  SECURITY_CONFIG.md  STATUS.md  STATUS_KUBEFLOW.md  TEST_REPORT.md  USAGE_GUIDE.md  comprehensive_secret_report.json  demo-list.md  env_config_report.json  java_validation_report.json  pyproject.toml  (+2 more)
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.kilo/skills/: cross-linker  llm-wiki  obsidian-wiki-ingest  wiki-agent  wiki-capture  wiki-context-pack  wiki-dashboard  wiki-dedup  wiki-digest  wiki-export  wiki-history-ingest  wiki-import  wiki-ingest  wiki-lint  wiki-query  wiki-quick-chat-capture  wiki-rebuild  wiki-research  wiki-setup  wiki-stage-commit  wiki-status  wiki-switch  wiki-synthesize  wiki-update
.qoder/quests/: code-structure-check.md  kserve-demo-development.md  kubernetes-integrate-kubeflow-execution-analysis.md  kubernetes-integrate-kubeflow-final-report.md  kubernetes-integrate-kubeflow-summary.md  kubernetes-integrate-kubeflow.md  kubernetes-operator-demo.md  open-demo-cli-development.md  simple-architecture-design.md  test-coverage-boost.md  velero-demo-enhancement.md
TEMPLATES/: README_TEMPLATE.md  STANDARD_README_TEMPLATE.md  five_star_metadata_template.json  five_star_readme_template.md  go_test_template.go  java_test_template.java  nodejs_test_template.test.js  python_test_template.py
ai-ml/: NAMING_CONVENTIONS.md  README.md  metadata.json
ai-ml/automl-demo/: README.md  metadata.json
ai-ml/cli/: ai-ml-cli-detail.md  ai-ml-cli.md
ai-ml/computer-vision-demo/: README.md  metadata.json
ai-ml/data-science/: README.md
ai-ml/federated-learning-demo/: README.md  metadata.json
ai-ml/llm/: LLM_GAP_ANALYSIS_AND_ROADMAP.md  LLM_TECH_STACK_PLAN.md  README.md
ai-ml/llm-compression-demo/: README.md  metadata.json
ai-ml/llm-distributed-training-demo/: README.md  metadata.json
ai-ml/llm-evaluation-demo/: README.md  metadata.json
ai-ml/llm-fine-tuning-demo/: README.md  metadata.json
ai-ml/llm-inference-demo/: README.md  metadata.json
ai-ml/llm-ops-demo/: README.md  metadata.json
ai-ml/llm-training-demo/: README.md  metadata.json
bigdata/: README.md  metadata.json
cli/: CLI-TOOL-ENHANCEMENT-GUIDE.md
cloud-cli/: README.md
config/: Makefile  pyproject.toml
configs/: .eslintrc.js  .golangci.yml  .pre-commit-config.yaml  .prettierrc  command-risk-rules.json  jest.config.js  metadata-schema-1.0.json  pyproject.toml
container/: NAMING_CONVENTIONS.md  README.md  metadata.json
data/: demo_mapping.json  java_validation_report.json
database/: NAMING_CONVENTIONS.md  README.md  metadata.json
docs/: CROSS-TECH-INDEX.md  OPTIMIZATION_PLAN.md  README.md  demo-list.md
go/: NAMING_CONVENTIONS.md  README.md  metadata.json
java/: JAVA-CASE-TEMPLATE.md  JAVA-TECH-STACK-COMPLETION-PLAN.md  NAMING_CONVENTIONS.md  README.md  metadata.json
kubernetes/: CROSS-REFERENCE-INDEX.md  NAMING_CONVENTIONS.md  README.md  generate_metadata.py  k8s-cli.md  metadata.json
kvm/: NAMING_CONVENTIONS.md  README.md
linux/: NAMING_CONVENTIONS.md  README.md  metadata.json
messaging/: NAMING_CONVENTIONS.md  README.md
monitoring/: NAMING_CONVENTIONS.md  README.md
networking/: NAMING_CONVENTIONS.md  README.md
nodejs/: NAMING_CONVENTIONS.md  README.md  metadata.json
opendemo/: __init__.py  cli.py
opendemo-cli/: CLI-TOOL-ENHANCEMENT-GUIDE.md  README.md  __init__.py  cli.py  fix_imports.py  setup.py
opendemo-wiki/: .env.example  .manifest.json  hot.md  index.md  log.md
python/: NAMING_CONVENTIONS.md  README.md  generate_readmes.py  metadata.json
reports/: DATABASE-DEMO-SUMMARY.md  PROJECT-CLEANUP-REPORT.md
scripts/: comprehensive_secret_check.py  generate_demo_list.py  generate_demos.py  generate_kubeflow_demos.py  generate_velero_demos.py  java_demo_validator.py  linux_demo_validator.py  log_sensitive_data_checker.py  project_cleaner.py  quality-check.sh  quick_generate.py  remove_hardcoded_secrets.py  rename_to_english.py  start.py
security/: README.md  metadata.json
sre/: README.md  metadata.json
tests/: conftest.py  test_ai_service.py  test_cli.py  test_config_service.py  test_demo_manager.py  test_demo_verifier.py  test_search_engine.py
traffic/: README.md  nginx-cli.md
vibe-coding/: README.md  VIBE-CODING-PLAN.md
virtualization/: NAMING_CONVENTIONS.md  README.md
(+6009 files in other folders)
