[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendemo"
version = "0.1.0"
description = "A CLI tool to generate high-quality, executable demo code for various programming languages"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Open Demo Contributors"}
]
keywords = ["demo", "code-examples", "cli", "learning", "programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Education",
]

dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docker = [
    "docker>=6.0.0",
]
git = [
    "gitpython>=3.1.0",
]

[project.scripts]
opendemo = "opendemo.cli:main"

[project.urls]
Homepage = "https://github.com/opendemo/opendemo"
Documentation = "https://github.com/opendemo/opendemo#readme"
Repository = "https://github.com/opendemo/opendemo"
Issues = "https://github.com/opendemo/opendemo/issues"

[tool.setuptools]
packages = ["opendemo", "opendemo.core", "opendemo.services", "opendemo.utils"]

[tool.setuptools.package-data]
opendemo = ["builtin_demos/**/*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
